# tetration-swl

./: README.md  cluster_login.py  modify_agents.py
AIDE_Tools/tetration-python-tools/: CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README.md  credentials-cox.json  credentials-old.json  endpoint-cox.json  endpoint-old.json  requirements.txt  setup.cfg  setup.py
AIDE_Tools/tetration-python-tools/adm2convos/: adm2convos.py  ep-cox.json
AIDE_Tools/tetration-python-tools/annotations2scopes/: annotations2scopes.py
AIDE_Tools/tetration-python-tools/anything2annotations/: anything2annotations.py
AIDE_Tools/tetration-python-tools/applications/: delete_applications.py  import_applications.py  sample.csv
AIDE_Tools/tetration-python-tools/docs/: about.rst  conf.py  index.rst
AIDE_Tools/tetration-python-tools/filters/: delete_filters.py  import_filters.py  update_filters.py
AIDE_Tools/tetration-python-tools/inventory/: get_inventory.py
AIDE_Tools/tetration-python-tools/miniadm/: README.md  miniadm.py
AIDE_Tools/tetration-python-tools/rdap/: rdap.py  sample.csv  sample_annotations.csv  sample_asn.csv  sample_failures.csv  sample_filters.csv
AIDE_Tools/tetration-python-tools/scopes/: ASPOV.csv  copy_scopes.py  delete_scopes.py  import_scopes.py
AIDE_Tools/tetration-python-tools/sensors/: delete  delete_sensors.py
AIDE_Tools/tetration-python-tools/sensors2annotations/: sensors2annotations.py
AIDE_Tools/tetration-python-tools/summarize/: sample.csv  sample_cidrs.csv  sample_network_addresses.csv  summarize.py
AIDE_Tools/tetration-python-tools/tetpyannotations/: annotations2scopes.py  anything2annotations.py
AIDE_Tools/tetration-python-tools/whois/: sample.csv  sample_annotations.csv  sample_asn.csv  sample_filters.csv  whois.py
AIDE_Tools/tetration-python-tools/xmind/: Default-Common.xmind  TACX.xmind  content.xml  (+4 more)
(+15 files in other folders)
