[metadata]
name = tetration-python-annotations
author = Greg Jost
author-email = grjost@cisco.com
summary = Cisco CX Tetration Annotations
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://wwwin-github.cisco.com/AIDE/tetration-python-annotations
project_urls =
    Bug Tracker = https://wwwin-github.cisco.com/AIDE/tetration-python-annotations/issues
    Documentation = https://wwwin-github.cisco.com/pages/AIDE/tetration-python-annotations/
    Source Code = https://wwwin-github.cisco.com/AIDE/tetration-python-annotations
license = CISCO
classifier =
    Development Status :: 2 - Development
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    cisco
    cx
    tetration
    ttg
    development

[files]
packages =
    tetpyannotations

[entry_points]
console_scripts =
    anything2annotations = tetpyannotations.anything2annotations:main
    annotations2scopes = tetpyannotations.annotations2scopes:main

[build_sphinx]
builders = html,man
source-dir = docs/source
build-dir = docs/build
all-files = 1

[bandit]
# Command: bandit -r --ini setup.cfg
# targets: comma separated list of target dirs/files to run bandit on
# exclude: comma separated list of excluded paths
# skips: comma separated list of tests to skip
# tests: comma separated list of tests to run
targets = aide
skips = B110,B501,B104
exclude = build,.git,.tox,./tests/.env,venv/,.idea
